--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Advanced Header -->
     <header class="header">
         <div class="nav-container">
-            <div class="logo">Pratibha Stitches</div>
+            <div class="logo"><a href="#hero" onclick="location.reload();"><img src="logo.png" alt="Pratibha Stitches Logo" class="logo-img"></a></div>
             
             <nav class="nav-right">
                 <a href="#designs" class="nav-link">Designs</a>
