--- a/index.html
+++ b/index.html
@@ -276,7 +276,8 @@
                 </div>
                 
                 <div class="contact-form">
-                    <form name="contact" method="POST" data-netlify="true">
+                    <form name="contact" id="contactForm" method="POST" data-netlify="true">
+                        <input type="hidden" name="form-name" value="contact">
                         <div class="form-group">
                             <label for="name" class="form-label">Your Name</label>
                             <input type="text" id="name" name="name" class="form-input" required>
