--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 </div>
                 
                 <div class="contact-form">
-                    <form id="contactForm" action="https://docs.google.com/forms/d/e/1FAIpQLSdg5fiMWmzfN1tmJ35ZVNhGE3eqHrdAaD7BDtf8bS-Cqv0VIQ/formResponse" method="POST" target="hidden_iframe">
+                    <form id="contactForm" name="contact" method="POST" data-netlify="true">
                         <div class="form-group">
                             <label for="name" class="form-label">Your Name</label>
                             <input type="text" id="name" name="entry.1110679373" class="form-input" placeholder="Enter your full name" required>
@@ -312,7 +312,6 @@
                             Send My Request
                         </button>
                     </form>
-                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;"></iframe>
                 </div>
             </div>
         </div>
