added insta page link

--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
             </div>
             
             <div class="social-buttons">
-                <a href="https://instagram.com/finesse_stitches" class="social-btn instagram-btn" target="_blank">
+                <a href="https://instagram.com/pratibha.stitches" class="social-btn instagram-btn" target="_blank">
                     <i class="fab fa-instagram"></i>
                     Follow Our Journey
                 </a>
